# hyphagraph

./: .env.dev.template  .env.example  .env.prod.template  .env.sample  .gitattributes  .gitignore  .hyphagraph.code-workspace  .hyphagraph.codeworkspace  ADAPTIVE_DISCOVERY_DUPLICATE_HANDLING.md  ADAPTIVE_DISCOVERY_IMPLEMENTATION.md  ADMIN_PANEL_DESIGN.md  AGENTS.md  AI.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_SETUP.md  AUTO_EXTRACTION_WORKFLOW.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  COMPUTED_RELATIONS.md  CONVENTIONS.md  Caddyfile  DATABASE_SCHEMA.md  DEPLOY.md  DOCUMENTATION_INDEX.md  E2E_DOCKER_TEST_RESULTS.md  E2E_TEST_ANALYSIS.md  E2E_TEST_FIXES_SUMMARY.md  E2E_TEST_RESULTS.md  E2E_TEST_SUMMARY.md  ENTITY_CRUD_IMPLEMENTATION.md  ENTITY_DETAIL_REDESIGN.md  EXTRACTION_ISSUES_ANALYSIS.md  FIBROMYALGIA_KNOWLEDGE_GRAPH_TEST.md  FIBROMYALGIA_TEST_RESULTS.json  FIBROMYALGIA_TEST_RESULTS.md  FINAL_EXTRACTION_RESULTS.md  FINAL_SESSION_REPORT.md  FINAL_SESSION_SUMMARY_COMPLETE.md  GETTING_STARTED.md  (+47 more)
backend/: .dockerignore  .env.test  .gitignore  Dockerfile  SETUP.md  alembic.ini  batch_extract_all.py  bootstrap_admin.py  docker-entrypoint.sh  hyphagraph.db  merge_fibromyalgia_duplicates.py  mypy_errors.txt  pyproject.toml  pytest.ini  run_auto_extraction.py  run_complete_workflow.py  test_adaptive_discovery.py  test_auto_extract_batch.py  test_combined_endpoint.py  test_complete_workflow.py  test_document_upload.py  test_end_to_end_pubmed.py  test_entity_slug_fix.py  test_extraction_api.py  test_extraction_demo.py  test_extraction_simple.py  test_full_pipeline.py  test_pipeline_new_entities.py  test_pipeline_simple.py  test_pubmed_api.py  test_pubmed_bulk_endpoint.py  test_pubmed_bulk_fetch.py  test_pubmed_bulk_import.py  test_pubmed_ingestion_simple.py  test_pubmed_search.py  test_smart_discovery_direct.py  test_url_extraction_endpoint.py  test_url_fetch.py
backend/alembic/: env.py
backend/alembic/old_migrations/: 006_add_email_verification.py  008_rename_metadata_to_source_metadata.py  009_remove_deprecated_fields.py  20241226_initial_schema.py  20241227_add_refresh_tokens.py
backend/alembic/versions/: 001_initial_clean.py  001_initial_schema.py  002_add_filter_indexes.py  002_add_staged_extractions.py  003_add_token_lookup_hash.py  003_fix_audit_logs_schema.py  004_add_entity_merge_records.py  004_add_entity_terms_created_at.py  005_add_audit_logs.py  005_add_role_disagreement.py  005_seed_ui_categories.py  006_add_entity_slug_unique_constraint.py  006_add_revision_status.py  007_add_document_content.py  007_add_entity_merge_indexes.py  007_add_password_reset.py  008_fix_authors_column_type.py  008_fix_relation_type_json_columns.py  009_add_entity_merge_flag.py  009_add_relation_types_table.py  010_add_revision_confirmation_fields.py  011_add_staged_extraction_auto_approved.py  012_add_user_token_version.py  (+18 more)
backend/app/: config.py  database.py  main.py  startup.py
backend/docs/: COCHRANE_INTEGRATION.md  DYNAMIC_RELATION_TYPES.md  EVIDENCE_QUALITY_STANDARDS.md  URL_FETCHING.md
backend/scripts/: adaptive_discovery_probe.py  run_extraction_eval.py  wipe_graph_data.py
backend/tests/: README.md  __init__.py  conftest.py  test_admin_service.py  test_alembic_schema_parity.py  test_audit_utils.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_handlers.py  test_auth_utils.py  test_batch_extraction_orchestrator.py  test_bug_report_service.py  test_config.py  test_document_extraction.py  test_document_extraction_workflow.py  test_document_service.py  test_draft_isolation.py  test_entity_endpoints.py  test_entity_filters.py  test_entity_linking_service.py  test_entity_merge_service.py  test_entity_prefill_service.py  test_entity_service.py  test_entity_service_mocked.py  test_entity_service_simple.py  test_entity_suggest_service.py  test_entity_terms.py  test_error_handlers.py  test_explain_endpoints.py  test_explanation_service.py  test_export_endpoints.py  test_extraction_evaluation.py  test_extraction_review_endpoints.py  test_extraction_review_service.py  test_extraction_service_mocked.py  test_extraction_validation.py  test_graph_cleaning_endpoints.py  test_graph_cleaning_service.py  test_hashing.py  test_import_service.py  (+39 more)
(+611 files in other folders)
